# data-project-template

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: notebook_template.ipynb
