[project]
name = "data-project-template"
version = "0.1.0"
description = "A template for data science and machine learning projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel~=6.29.5",
    "ipywidgets~=8.1.5",
    "matplotlib~=3.10.0",
    "numpy~=2.2.0",
    "openpyxl~=3.1.5",
    "pandas~=2.2.3",
    "plotly~=5.24.1",
    "scikit-learn~=1.6.0",
    "seaborn~=0.13.2",
    "tqdm~=4.67.1",
]

[dependency-groups]
dev = [
    "pre-commit~=4.0.1",
    "pytest-cov~=6.0.0",
    "pytest~=8.3.3",
    "pytest-env~=1.1.5",
    "ruff~=0.8.0",
]
